Fix: current Files and add changes on the repositorie

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,10 @@
 {
-  "compilerOptions": {
-    "paths": {
-      "@/*": ["./*"]
+    "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+            "@/*": [ "./*" ],
+            "@/components/*": [ "components/*" ],
+            "@/assets/*": [ "assets/*" ]
+        }
     }
-  }
 }
