--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-aria/ssr": "^3.6.0",
+    "bootstrap": "^5.2.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.4.0",
+    "formik": "^2.2.9",
     "next": "13.4.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.7.4",
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.11.1",
+    "sass": "^1.62.1"
   },
   "devDependencies": {
     "standard": "^17.0.0"
