--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,9 +2,9 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
-            "@/*": [ "./*" ],
-            "@/components/*": [ "components/*" ],
-            "@/assets/*": [ "assets/*" ]
+            "@/*": [ "./*" ]
+            // "@/components/*": [ "components/*" ],
+            // "@/assets/*": [ "assets/*" ]
         }
     }
 }
