--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@react-aria/ssr": "^3.6.0",
     "bootstrap": "^5.2.3",
     "eslint": "8.39.0",
-    "eslint-config-next": "13.4.0",
     "formik": "^2.2.9",
     "next": "13.4.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.11.1",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
+    "eslint-config-next": "^13.4.1",
     "standard": "^17.0.0"
   }
 }
